Applications/Nameserver/base/resources/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nameserver
  labels:
    reloader.stakater.com/reload: 'enabled'
