Applications/Nameserver/base/resources/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nameserver
  labels:
    app.kubernetes.io/component: 'application' # The component within the architecture
  annotations:
    #reloader.stakater.com/auto: 'true' # Reloads workload when any referenced ConfigMap or Secret changes
    reloader.stakater.com/search: 'true' # Enables search mode (only reloads if matching secrets/configMaps are found)
    #configmap.reloader.stakater.com/auto: 'true' # Reloads only when referenced ConfigMap(s) change
    #configmap.reloader.stakater.com/reload: '' # Reloads when specific ConfigMap(s) change, regardless of how they're used
    #secret.reloader.stakater.com/auto: 'true' # Reloads only when referenced Secret(s) change
    #secret.reloader.stakater.com/reload: '' # Reloads when specific Secret(s) change, regardless of how they're used
    reloader.stakater.com/rollout-strategy: 'rollout' # Specifies the rollout strategy for the workload (rollout (default) / restart)
spec:
  revisionHistoryLimit: 3
  replicas: 0
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/component: 'application' # The component within the architecture
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 180
      containers:
        - name: bind
          image: ghcr.io/aessing/bind:0.0.0
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            readOnlyRootFilesystem: false
          resources:
            requests:
              memory: 128Mi
              cpu: 0.05
            limits:
              memory: 256Mi
              cpu: 0.2
          ports:
            - containerPort: 53
              protocol: TCP
              name: bind-tcp
            - containerPort: 53
              protocol: UDP
              name: bind-udp
            - containerPort: 443
              protocol: TCP
              name: https
            - containerPort: 853
              protocol: TCP
              name: bind-dot
          startupProbe:
            exec:
              command: ['/usr/bin/dig', '@127.0.0.1', 'localhost']
            initialDelaySeconds: 5
            periodSeconds: 2
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 30
          readinessProbe:
            exec:
              command: ['/usr/bin/dig', '@127.0.0.1', 'localhost']
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 2
          livenessProbe:
            exec:
              command: ['/usr/bin/dig', '@127.0.0.1', 'localhost']
            initialDelaySeconds: 30
            periodSeconds: 60
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
            - name: bind-config-vol
              mountPath: /etc/bind/named.conf
              subPath: named.conf
              readOnly: true
            - name: bind-zones-vol
              mountPath: /var/lib/bind/zones
              readOnly: true
            - name: bind-certificate-vol
              mountPath: /etc/bind/cert
              readOnly: true
      volumes:
        - name: bind-config-vol
          configMap:
            name: nameserver-config
        - name: bind-zones-vol
          configMap:
            name: nameserver-zones
        - name: bind-certificate-vol
          secret:
            secretName: nameserver-certificate
