Applications/Nameserver/base/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nameserver
  labels:
    app.kubernetes.io/component: 'application' # The component within the architecture
spec:
  loadBalancerIP: '0.0.0.0'
  selector:
    app.kubernetes.io/component: 'application' # The component within the architecture
  ports:
    - protocol: TCP
      port: 53
      targetPort: 53
      name: dns-tcp
    - protocol: UDP
      port: 53
      targetPort: 53
      name: dns-udp
    - protocol: TCP
      port: 443
      targetPort: 443
      name: https
    - protocol: TCP
      port: 853
      targetPort: 853
      name: dns-dot
  type: LoadBalancer
